--- a/sass/elements/header.scss
+++ b/sass/elements/header.scss
@@ -12,6 +12,7 @@ header{
             position: relative;
             width: fit-content;
             margin-left: 40px;
+            cursor: pointer;
 
             &::after{
                 content: '';
@@ -20,7 +21,22 @@ header{
                 animation: logo 2s forwards;
                 animation-iteration-count: 1;
                 left: -20px;
-                background-color: #000000;
+                background-color: var(--black);
+            }
+
+            &::before{
+                content: '';
+                position: absolute;
+                height: 5px;
+                width: 0;
+                left: -20px;
+                background-color: var(--black);
+                bottom: 0;
+                transition: width .3s ease-in-out;
+            }
+
+            &:hover::before{
+                width: calc(100% + 20px);
             }
         }
 
