--- a/sass/typography/set.scss
+++ b/sass/typography/set.scss
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.content{
+    margin: auto;
+    max-width: 1240px;
+    padding: 0 20px;
+    padding-top: 140px;
+}
