--- a/sass/elements/header.scss
+++ b/sass/elements/header.scss
@@ -2,13 +2,14 @@ header{
 
     display: grid;
     width: 100%;
-    grid-template-columns: 1fr 70% 1fr;
+    grid-template-columns: 1fr 70% 1fr 1fr;
     align-items: center;
     padding: 30px 0;
     position: fixed;
-    background-color: var(--white);
+    background-color: var(--bg-color);
+    transition: all .3s ease-in-out;
     
-    .active{
+    &.active{
         -webkit-box-shadow: 0px 5px 30px -18px rgba(0, 0, 0, 1);
         -moz-box-shadow: 0px 5px 30px -18px rgba(0, 0, 0, 1);
         box-shadow: 0px 5px 30px -18px rgba(0, 0, 0, 1);
@@ -22,6 +23,7 @@ header{
             position: relative;
             width: fit-content;
             margin-left: 40px;
+            color: var(--font-color);
             cursor: pointer;
 
             &::after{
@@ -31,7 +33,7 @@ header{
                 animation: logo 2s forwards;
                 animation-iteration-count: 1;
                 left: -10px;
-                background-color: var(--black);
+                background-color: var(--font-color);
             }
 
             &::before{
@@ -40,7 +42,7 @@ header{
                 height: 5px;
                 width: 0;
                 left: -10px;
-                background-color: var(--black);
+                background-color: var(--font-color);
                 bottom: 0;
                 transition: width .3s ease-in-out;
             }
@@ -62,7 +64,7 @@ header{
 
         a{
             text-decoration: none;
-            color: var(--black);
+            color: var(--font-color);
             font-size: 20px;
         }
     }
@@ -70,8 +72,15 @@ header{
     .login{
         a{
             text-decoration: none;
-            color: var(--black);
+            color: var(--font-color);
             font-size: 20px;
+        }
+    }
+
+    .dark-mode{
+        img{
+            width: 30px;
+            cursor: pointer;
         }
     }
 }
