--- a/sass/typography/set.scss
+++ b/sass/typography/set.scss
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    transition: all .3s ease-in-out;
+    background-color: var(--bg-color);
+    color: var(--font-color);
+}
+
 .content{
     margin: auto;
     max-width: 1240px;
